[tool.poetry]
name = "py-docs"
version = "0.1.0"
description = "Python Documents generated for gitbook"
authors = ["snyata <core@synavate.tech>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^7.4.5"
autodoc = "^0.5.0"
autodoc_pydantic = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
